--- a/index.html
+++ b/index.html
@@ -12,6 +12,51 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <div class="container">
+      <h1>Sign Up Today!</h1>
+      <!-- form -->
+      <form id="form">
+        <!-- full name -->
+        <div class="form-group">
+          <label for="name">Full Name</label>
+          <input type="text" id="name" placeholder="Full Name" />
+        </div>
+        <!-- phone number -->
+        <div class="form-group">
+          <label for="phone">Phone Number</label>
+          <input type="tel" id="phone" placeholder="555-555-555" />
+        </div>
+        <!-- email adress -->
+        <div class="form-group">
+          <label for="email">Email Adress</label>
+          <input type="email" id="email" placeholder="email@example.com" />
+        </div>
+        <!-- website url -->
+        <div class="form-group">
+          <label for="website">Website Url</label>
+          <input type="url" id="website" placeholder="http://www.website.com" />
+        </div>
+        <!-- password -->
+        <div class="form-group">
+          <label for="password1">Password</label>
+          <input type="password" id="password1" placeholder="Create Password" />
+        </div>
+        <!-- confirm password -->
+        <div class="form-group">
+          <label for="password2">Confirm Password</label>
+          <input
+            type="password"
+            id="password2"
+            placeholder="Confirm Password"
+          />
+        </div>
+        <button type="submit">Register</button>
+      </form>
+      <!-- Error/Success message -->
+      <div class="message-container">
+        <h3 id="message">Don't Hesitate!</h3>
+      </div>
+    </div>
     <!-- Script -->
     <script src="script.js"></script>
   </body>
