--- a/index.html
+++ b/index.html
@@ -19,27 +19,57 @@
         <!-- full name -->
         <div class="form-group">
           <label for="name">Full Name</label>
-          <input type="text" id="name" placeholder="Full Name" />
+          <input
+            type="text"
+            id="name"
+            placeholder="Full Name"
+            required
+            minlength="3"
+            maxlength="20"
+          />
         </div>
         <!-- phone number -->
         <div class="form-group">
           <label for="phone">Phone Number</label>
-          <input type="tel" id="phone" placeholder="555-555-555" />
+          <input
+            type="tel"
+            id="phone"
+            placeholder="555-555-5555"
+            required
+            pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}"
+          />
         </div>
         <!-- email adress -->
         <div class="form-group">
           <label for="email">Email Adress</label>
-          <input type="email" id="email" placeholder="email@example.com" />
+          <input
+            type="email"
+            id="email"
+            placeholder="email@example.com"
+            required
+          />
         </div>
         <!-- website url -->
         <div class="form-group">
           <label for="website">Website Url</label>
-          <input type="url" id="website" placeholder="http://www.website.com" />
+          <input
+            type="url"
+            id="website"
+            placeholder="http://website.com"
+            required
+          />
         </div>
         <!-- password -->
         <div class="form-group">
           <label for="password1">Password</label>
-          <input type="password" id="password1" placeholder="Create Password" />
+          <input
+            type="password"
+            id="password1"
+            placeholder="Create Password (Min. 8 Characters)"
+            required
+            pattern="^(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?=.*[a-zA-Z]).{8,}$"
+            title="Please include at least 1 UPPERCASE character, 1 LOWERCASE character, and 1 NUMBER"
+          />
         </div>
         <!-- confirm password -->
         <div class="form-group">
@@ -48,6 +78,8 @@
             type="password"
             id="password2"
             placeholder="Confirm Password"
+            required
+            pattern="^(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?=.*[a-zA-Z]).{8,}$"
           />
         </div>
         <button type="submit">Register</button>
