--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
             required
             minlength="3"
             maxlength="20"
+            name="name"
           />
         </div>
         <!-- phone number -->
@@ -37,6 +38,7 @@
             placeholder="555-555-5555"
             required
             pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}"
+            name="phone"
           />
         </div>
         <!-- email adress -->
@@ -47,6 +49,7 @@
             id="email"
             placeholder="email@example.com"
             required
+            name="email"
           />
         </div>
         <!-- website url -->
@@ -57,6 +60,7 @@
             id="website"
             placeholder="http://website.com"
             required
+            name="website"
           />
         </div>
         <!-- password -->
@@ -80,6 +84,7 @@
             placeholder="Confirm Password"
             required
             pattern="^(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?=.*[a-zA-Z]).{8,}$"
+            name="password"
           />
         </div>
         <button type="submit">Register</button>
